...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.MainActivity">

    <ImageButton
        android:id="@+id/btnProfil"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/transparent"
        android:contentDescription="@string/logout"
        app:layout_constraintBottom_toBottomOf="@+id/tvWelcome"
...
