...
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSwitchTheme" />

        <Button
            android:id="@+id/action_logout"
            style="@style/poppinsMedium"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/redBtn"
...
